cluster/simple/service.blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    run: blue-deployment
spec:
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8080
  selector:
    run: blue-deployment
