cluster/simple/ingress.green.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-green
  annotations:
    kubernetes.io/ingress.class: nginx-protected
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/limit-rps: '10'
#    nginx.ingress.kubernetes.io/whitelist-source-range: "126.37.5.171/12"
spec:
  tls:
  - hosts: ["simple-test.dausw2-general.k8s.platform.einstein.com"]
    secretName: simple-tls
  rules:
  - host: simple-test.dausw2-general.k8s.platform.einstein.com
    http:
      paths:
      - path: /green
        backend:
          serviceName: green-service
          servicePort: 8080
