cluster/simple/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  rules:
  - http:
      paths:
      - path: /green
        backend:
          serviceName: green-service
          servicePort: 8888
      - path: /blue
        backend:
          serviceName: blue-service
          servicePort: 8888
